--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
 		<title>YOUR COMPANY NAME</title>
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 		<!--Fontawesome Icons-->
-		<link rel="stylesheet" href="./fontawesome/css/all.css" />
+		<!-- 	<link rel="stylesheet" href="./fontawesome/css/all.css" /> -->
 		<!--Bootstap -->
-		<link
+		<!-- <link
 			rel="stylesheet"
 			href="./bootstrap-5.0.2-dist/css/bootstrap.min.css"
-		/>
+		/> -->
 		<script
 			defer
 			src="./bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"
 		></script>
-
 		<!--Custom Styles-->
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
